parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONST

Grammar

Rule 0     S' -> code
Rule 1     code -> function
Rule 2     code -> code code
Rule 3     function -> DEF NAME LPAREN RPAREN statement
Rule 4     function -> DEF NAME LPAREN RPAREN statementc
Rule 5     function -> DEF NAME LPAREN NAME RPAREN statement
Rule 6     function -> DEF NAME LPAREN NAME RPAREN statementc
Rule 7     function -> DEF NAME LPAREN args RPAREN statement
Rule 8     function -> DEF NAME LPAREN args RPAREN statementc
Rule 9     statement -> IF LPAREN expression RPAREN statementc
Rule 10    statement -> IF LPAREN expression RPAREN statement
Rule 11    statement -> IF LPAREN expression RPAREN statementc ELSE statementc
Rule 12    statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 13    statement -> IF LPAREN expression RPAREN statementc ELSE statement
Rule 14    statement -> IF LPAREN expression RPAREN statement ELSE statementc
Rule 15    statement -> FOR LPAREN statement expression SEMICOLON statement RPAREN statementc
Rule 16    statement -> FOR LPAREN statement expression SEMICOLON statement RPAREN statement
Rule 17    statement -> WHILE LPAREN expression RPAREN statementc
Rule 18    statement -> WHILE LPAREN expression RPAREN statement
Rule 19    statement -> NAME DPLUS SEMICOLON
Rule 20    statement -> NAME DMINUS SEMICOLON
Rule 21    statement -> DPLUS NAME SEMICOLON
Rule 22    statement -> DMINUS NAME SEMICOLON
Rule 23    expression -> NAME DPLUS
Rule 24    expression -> NAME DMINUS
Rule 25    expression -> DPLUS NAME
Rule 26    expression -> DMINUS NAME
Rule 27    args -> args COMMA NAME
Rule 28    args -> NAME COMMA NAME
Rule 29    argse -> argse COMMA expression
Rule 30    statement -> BREAK SEMICOLON
Rule 31    argse -> expression COMMA expression
Rule 32    statement -> NAME LPAREN RPAREN SEMICOLON
Rule 33    statement -> NAME LPAREN argse RPAREN SEMICOLON
Rule 34    statement -> NAME LPAREN expression RPAREN SEMICOLON
Rule 35    statements -> statement statements
Rule 36    statements -> statement statement
Rule 37    statementc -> LBRAC statement RBRAC
Rule 38    statementc -> LBRAC statements RBRAC
Rule 39    statementc -> LBRAC empty RBRAC
Rule 40    expression -> expression COLON LBRACE argse RBRACE
Rule 41    expression -> expression COLON LBRACE expression RBRACE
Rule 42    expression -> expression COLON LBRACE RBRACE
Rule 43    expression -> LBRACE argse RBRACE
Rule 44    expression -> LBRACE expression RBRACE
Rule 45    expression -> LBRACE RBRACE
Rule 46    statement -> VAR NAME EQUALS expression SEMICOLON
Rule 47    statement -> NAME EQUALS expression SEMICOLON
Rule 48    statement -> expression LBRACE expression RBRACE EQUALS expression SEMICOLON
Rule 49    statement -> RETURN expression SEMICOLON
Rule 50    expression -> INT
Rule 51    expression -> NAME
Rule 52    expression -> expression LBRACE expression RBRACE
Rule 53    expression -> STRING
Rule 54    expression -> NOT expression
Rule 55    expression -> ISARR LPAREN expression RPAREN
Rule 56    expression -> ARRLEN LPAREN expression RPAREN
Rule 57    expression -> NAME LPAREN RPAREN
Rule 58    expression -> NAME LPAREN argse RPAREN
Rule 59    expression -> NAME LPAREN expression RPAREN
Rule 60    expression -> expression MUL expression
Rule 61    expression -> expression DIV expression
Rule 62    expression -> expression PLUS expression
Rule 63    expression -> expression MINUS expression
Rule 64    expression -> expression AND expression
Rule 65    expression -> expression AND2 expression
Rule 66    expression -> expression OR2 expression
Rule 67    expression -> expression OR expression
Rule 68    expression -> expression DNE expression
Rule 69    expression -> expression EQ expression
Rule 70    expression -> expression GRT expression
Rule 71    expression -> expression GRTE expression
Rule 72    expression -> expression LT expression
Rule 73    expression -> expression LTE expression
Rule 74    empty -> <empty>

Terminals, with rules where they appear

AND                  : 64
AND2                 : 65
ARRLEN               : 56
BREAK                : 30
COLON                : 40 41 42
COMMA                : 27 28 29 31
CONST                : 
DEF                  : 3 4 5 6 7 8
DIV                  : 61
DMINUS               : 20 22 24 26
DNE                  : 68
DPLUS                : 19 21 23 25
ELSE                 : 11 12 13 14
EQ                   : 69
EQUALS               : 46 47 48
FOR                  : 15 16
GRT                  : 70
GRTE                 : 71
IF                   : 9 10 11 12 13 14
INT                  : 50
ISARR                : 55
LBRAC                : 37 38 39
LBRACE               : 40 41 42 43 44 45 48 52
LPAREN               : 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 32 33 34 55 56 57 58 59
LT                   : 72
LTE                  : 73
MINUS                : 63
MUL                  : 60
NAME                 : 3 4 5 5 6 6 7 8 19 20 21 22 23 24 25 26 27 28 28 32 33 34 46 47 51 57 58 59
NOT                  : 54
OR                   : 67
OR2                  : 66
PLUS                 : 62
RBRAC                : 37 38 39
RBRACE               : 40 41 42 43 44 45 48 52
RETURN               : 49
RPAREN               : 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 32 33 34 55 56 57 58 59
SEMICOLON            : 15 16 19 20 21 22 30 32 33 34 46 47 48 49
STRING               : 53
VAR                  : 46
WHILE                : 17 18
error                : 

Nonterminals, with rules where they appear

args                 : 7 8 27
argse                : 29 33 40 43 58
code                 : 2 2 0
empty                : 39
expression           : 9 10 11 12 13 14 15 16 17 18 29 31 31 34 40 41 41 42 44 46 47 48 48 48 49 52 52 54 55 56 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73
function             : 1
statement            : 3 5 7 10 12 12 13 14 15 15 16 16 16 18 35 36 36 37
statementc           : 4 6 8 9 11 11 13 14 15 17
statements           : 35 38

Parsing method: LALR

state 0

    (0) S' -> . code
    (1) code -> . function
    (2) code -> . code code
    (3) function -> . DEF NAME LPAREN RPAREN statement
    (4) function -> . DEF NAME LPAREN RPAREN statementc
    (5) function -> . DEF NAME LPAREN NAME RPAREN statement
    (6) function -> . DEF NAME LPAREN NAME RPAREN statementc
    (7) function -> . DEF NAME LPAREN args RPAREN statement
    (8) function -> . DEF NAME LPAREN args RPAREN statementc

    DEF             shift and go to state 3

    code                           shift and go to state 1
    function                       shift and go to state 2

state 1

    (0) S' -> code .
    (2) code -> code . code
    (1) code -> . function
    (2) code -> . code code
    (3) function -> . DEF NAME LPAREN RPAREN statement
    (4) function -> . DEF NAME LPAREN RPAREN statementc
    (5) function -> . DEF NAME LPAREN NAME RPAREN statement
    (6) function -> . DEF NAME LPAREN NAME RPAREN statementc
    (7) function -> . DEF NAME LPAREN args RPAREN statement
    (8) function -> . DEF NAME LPAREN args RPAREN statementc

    DEF             shift and go to state 3

    code                           shift and go to state 4
    function                       shift and go to state 2

state 2

    (1) code -> function .

    DEF             reduce using rule 1 (code -> function .)
    $end            reduce using rule 1 (code -> function .)


state 3

    (3) function -> DEF . NAME LPAREN RPAREN statement
    (4) function -> DEF . NAME LPAREN RPAREN statementc
    (5) function -> DEF . NAME LPAREN NAME RPAREN statement
    (6) function -> DEF . NAME LPAREN NAME RPAREN statementc
    (7) function -> DEF . NAME LPAREN args RPAREN statement
    (8) function -> DEF . NAME LPAREN args RPAREN statementc

    NAME            shift and go to state 5


state 4

    (2) code -> code code .
    (2) code -> code . code
    (1) code -> . function
    (2) code -> . code code
    (3) function -> . DEF NAME LPAREN RPAREN statement
    (4) function -> . DEF NAME LPAREN RPAREN statementc
    (5) function -> . DEF NAME LPAREN NAME RPAREN statement
    (6) function -> . DEF NAME LPAREN NAME RPAREN statementc
    (7) function -> . DEF NAME LPAREN args RPAREN statement
    (8) function -> . DEF NAME LPAREN args RPAREN statementc

  ! shift/reduce conflict for DEF resolved as shift
    $end            reduce using rule 2 (code -> code code .)
    DEF             shift and go to state 3

  ! DEF             [ reduce using rule 2 (code -> code code .) ]

    code                           shift and go to state 4
    function                       shift and go to state 2

state 5

    (3) function -> DEF NAME . LPAREN RPAREN statement
    (4) function -> DEF NAME . LPAREN RPAREN statementc
    (5) function -> DEF NAME . LPAREN NAME RPAREN statement
    (6) function -> DEF NAME . LPAREN NAME RPAREN statementc
    (7) function -> DEF NAME . LPAREN args RPAREN statement
    (8) function -> DEF NAME . LPAREN args RPAREN statementc

    LPAREN          shift and go to state 6


state 6

    (3) function -> DEF NAME LPAREN . RPAREN statement
    (4) function -> DEF NAME LPAREN . RPAREN statementc
    (5) function -> DEF NAME LPAREN . NAME RPAREN statement
    (6) function -> DEF NAME LPAREN . NAME RPAREN statementc
    (7) function -> DEF NAME LPAREN . args RPAREN statement
    (8) function -> DEF NAME LPAREN . args RPAREN statementc
    (27) args -> . args COMMA NAME
    (28) args -> . NAME COMMA NAME

    RPAREN          shift and go to state 8
    NAME            shift and go to state 7

    args                           shift and go to state 9

state 7

    (5) function -> DEF NAME LPAREN NAME . RPAREN statement
    (6) function -> DEF NAME LPAREN NAME . RPAREN statementc
    (28) args -> NAME . COMMA NAME

    RPAREN          shift and go to state 10
    COMMA           shift and go to state 11


state 8

    (3) function -> DEF NAME LPAREN RPAREN . statement
    (4) function -> DEF NAME LPAREN RPAREN . statementc
    (9) statement -> . IF LPAREN expression RPAREN statementc
    (10) statement -> . IF LPAREN expression RPAREN statement
    (11) statement -> . IF LPAREN expression RPAREN statementc ELSE statementc
    (12) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (13) statement -> . IF LPAREN expression RPAREN statementc ELSE statement
    (14) statement -> . IF LPAREN expression RPAREN statement ELSE statementc
    (15) statement -> . FOR LPAREN statement expression SEMICOLON statement RPAREN statementc
    (16) statement -> . FOR LPAREN statement expression SEMICOLON statement RPAREN statement
    (17) statement -> . WHILE LPAREN expression RPAREN statementc
    (18) statement -> . WHILE LPAREN expression RPAREN statement
    (19) statement -> . NAME DPLUS SEMICOLON
    (20) statement -> . NAME DMINUS SEMICOLON
    (21) statement -> . DPLUS NAME SEMICOLON
    (22) statement -> . DMINUS NAME SEMICOLON
    (30) statement -> . BREAK SEMICOLON
    (32) statement -> . NAME LPAREN RPAREN SEMICOLON
    (33) statement -> . NAME LPAREN argse RPAREN SEMICOLON
    (34) statement -> . NAME LPAREN expression RPAREN SEMICOLON
    (46) statement -> . VAR NAME EQUALS expression SEMICOLON
    (47) statement -> . NAME EQUALS expression SEMICOLON
    (48) statement -> . expression LBRACE expression RBRACE EQUALS expression SEMICOLON
    (49) statement -> . RETURN expression SEMICOLON
    (37) statementc -> . LBRAC statement RBRAC
    (38) statementc -> . LBRAC statements RBRAC
    (39) statementc -> . LBRAC empty RBRAC
    (23) expression -> . NAME DPLUS
    (24) expression -> . NAME DMINUS
    (25) expression -> . DPLUS NAME
    (26) expression -> . DMINUS NAME
    (40) expression -> . expression COLON LBRACE argse RBRACE
    (41) expression -> . expression COLON LBRACE expression RBRACE
    (42) expression -> . expression COLON LBRACE RBRACE
    (43) expression -> . LBRACE argse RBRACE
    (44) expression -> . LBRACE expression RBRACE
    (45) expression -> . LBRACE RBRACE
    (50) expression -> . INT
    (51) expression -> . NAME
    (52) expression -> . expression LBRACE expression RBRACE
    (53) expression -> . STRING
    (54) expression -> . NOT expression
    (55) expression -> . ISARR LPAREN expression RPAREN
    (56) expression -> . ARRLEN LPAREN expression RPAREN
    (57) expression -> . NAME LPAREN RPAREN
    (58) expression -> . NAME LPAREN argse RPAREN
    (59) expression -> . NAME LPAREN expression RPAREN
    (60) expression -> . expression MUL expression
    (61) expression -> . expression DIV expression
    (62) expression -> . expression PLUS expression
    (63) expression -> . expression MINUS expression
    (64) expression -> . expression AND expression
    (65) expression -> . expression AND2 expression
    (66) expression -> . expression OR2 expression
    (67) expression -> . expression OR expression
    (68) expression -> . expression DNE expression
    (69) expression -> . expression EQ expression
    (70) expression -> . expression GRT expression
    (71) expression -> . expression GRTE expression
    (72) expression -> . expression LT expression
    (73) expression -> . expression LTE expression

    IF              shift and go to state 15
    FOR             shift and go to state 17
    WHILE           shift and go to state 18
    NAME            shift and go to state 12
    DPLUS           shift and go to state 19
    DMINUS          shift and go to state 20
    BREAK           shift and go to state 21
    VAR             shift and go to state 22
    RETURN          shift and go to state 24
    LBRAC           shift and go to state 25
    LBRACE          shift and go to state 23
    INT             shift and go to state 26
    STRING          shift and go to state 27
    NOT             shift and go to state 28
    ISARR           shift and go to state 29
    ARRLEN          shift and go to state 30

    statement                      shift and go to state 13
    statementc                     shift and go to state 14
    expression                     shift and go to state 16

state 9

    (7) function -> DEF NAME LPAREN args . RPAREN statement
    (8) function -> DEF NAME LPAREN args . RPAREN statementc
    (27) args -> args . COMMA NAME

    RPAREN          shift and go to state 31
    COMMA           shift and go to state 32


state 10

    (5) function -> DEF NAME LPAREN NAME RPAREN . statement
    (6) function -> DEF NAME LPAREN NAME RPAREN . statementc
    (9) statement -> . IF LPAREN expression RPAREN statementc
    (10) statement -> . IF LPAREN expression RPAREN statement
    (11) statement -> . IF LPAREN expression RPAREN statementc ELSE statementc
    (12) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (13) statement -> . IF LPAREN expression RPAREN statementc ELSE statement
    (14) statement -> . IF LPAREN expression RPAREN statement ELSE statementc
    (15) statement -> . FOR LPAREN statement expression SEMICOLON statement RPAREN statementc
    (16) statement -> . FOR LPAREN statement expression SEMICOLON statement RPAREN statement
    (17) statement -> . WHILE LPAREN expression RPAREN statementc
    (18) statement -> . WHILE LPAREN expression RPAREN statement
    (19) statement -> . NAME DPLUS SEMICOLON
    (20) statement -> . NAME DMINUS SEMICOLON
    (21) statement -> . DPLUS NAME SEMICOLON
    (22) statement -> . DMINUS NAME SEMICOLON
    (30) statement -> . BREAK SEMICOLON
    (32) statement -> . NAME LPAREN RPAREN SEMICOLON
    (33) statement -> . NAME LPAREN argse RPAREN SEMICOLON
    (34) statement -> . NAME LPAREN expression RPAREN SEMICOLON
    (46) statement -> . VAR NAME EQUALS expression SEMICOLON
    (47) statement -> . NAME EQUALS expression SEMICOLON
    (48) statement -> . expression LBRACE expression RBRACE EQUALS expression SEMICOLON
    (49) statement -> . RETURN expression SEMICOLON
    (37) statementc -> . LBRAC statement RBRAC
    (38) statementc -> . LBRAC statements RBRAC
    (39) statementc -> . LBRAC empty RBRAC
    (23) expression -> . NAME DPLUS
    (24) expression -> . NAME DMINUS
    (25) expression -> . DPLUS NAME
    (26) expression -> . DMINUS NAME
    (40) expression -> . expression COLON LBRACE argse RBRACE
    (41) expression -> . expression COLON LBRACE expression RBRACE
    (42) expression -> . expression COLON LBRACE RBRACE
    (43) expression -> . LBRACE argse RBRACE
    (44) expression -> . LBRACE expression RBRACE
    (45) expression -> . LBRACE RBRACE
    (50) expression -> . INT
    (51) expression -> . NAME
    (52) expression -> . expression LBRACE expression RBRACE
    (53) expression -> . STRING
    (54) expression -> . NOT expression
    (55) expression -> . ISARR LPAREN expression RPAREN
    (56) expression -> . ARRLEN LPAREN expression RPAREN
    (57) expression -> . NAME LPAREN RPAREN
    (58) expression -> . NAME LPAREN argse RPAREN
    (59) expression -> . NAME LPAREN expression RPAREN
    (60) expression -> . expression MUL expression
    (61) expression -> . expression DIV expression
    (62) expression -> . expression PLUS expression
    (63) expression -> . expression MINUS expression
    (64) expression -> . expression AND expression
    (65) expression -> . expression AND2 expression
    (66) expression -> . expression OR2 expression
    (67) expression -> . expression OR expression
    (68) expression -> . expression DNE expression
    (69) expression -> . expression EQ expression
    (70) expression -> . expression GRT expression
    (71) expression -> . expression GRTE expression
    (72) expression -> . expression LT expression
    (73) expression -> . expression LTE expression

    IF              shift and go to state 15
    FOR             shift and go to state 17
    WHILE           shift and go to state 18
    NAME            shift and go to state 12
    DPLUS           shift and go to state 19
    DMINUS          shift and go to state 20
    BREAK           shift and go to state 21
    VAR             shift and go to state 22
    RETURN          shift and go to state 24
    LBRAC           shift and go to state 25
    LBRACE          shift and go to state 23
    INT             shift and go to state 26
    STRING          shift and go to state 27
    NOT             shift and go to state 28
    ISARR           shift and go to state 29
    ARRLEN          shift and go to state 30

    statement                      shift and go to state 33
    statementc                     shift and go to state 34
    expression                     shift and go to state 16

state 11

    (28) args -> NAME COMMA . NAME

    NAME            shift and go to state 35


state 12

    (19) statement -> NAME . DPLUS SEMICOLON
    (20) statement -> NAME . DMINUS SEMICOLON
    (32) statement -> NAME . LPAREN RPAREN SEMICOLON
    (33) statement -> NAME . LPAREN argse RPAREN SEMICOLON
    (34) statement -> NAME . LPAREN expression RPAREN SEMICOLON
    (47) statement -> NAME . EQUALS expression SEMICOLON
    (23) expression -> NAME . DPLUS
    (24) expression -> NAME . DMINUS
    (51) expression -> NAME .
    (57) expression -> NAME . LPAREN RPAREN
    (58) expression -> NAME . LPAREN argse RPAREN
    (59) expression -> NAME . LPAREN expression RPAREN

    DPLUS           shift and go to state 36
    DMINUS          shift and go to state 37
    LPAREN          shift and go to state 38
    EQUALS          shift and go to state 39
    LBRACE          reduce using rule 51 (expression -> NAME .)
    COLON           reduce using rule 51 (expression -> NAME .)
    MUL             reduce using rule 51 (expression -> NAME .)
    DIV             reduce using rule 51 (expression -> NAME .)
    PLUS            reduce using rule 51 (expression -> NAME .)
    MINUS           reduce using rule 51 (expression -> NAME .)
    AND             reduce using rule 51 (expression -> NAME .)
    AND2            reduce using rule 51 (expression -> NAME .)
    OR2             reduce using rule 51 (expression -> NAME .)
    OR              reduce using rule 51 (expression -> NAME .)
    DNE             reduce using rule 51 (expression -> NAME .)
    EQ              reduce using rule 51 (expression -> NAME .)
    GRT             reduce using rule 51 (expression -> NAME .)
    GRTE            reduce using rule 51 (expression -> NAME .)
    LT              reduce using rule 51 (expression -> NAME .)
    LTE             reduce using rule 51 (expression -> NAME .)


state 13

    (3) function -> DEF NAME LPAREN RPAREN statement .

    DEF             reduce using rule 3 (function -> DEF NAME LPAREN RPAREN statement .)
    $end            reduce using rule 3 (function -> DEF NAME LPAREN RPAREN statement .)


state 14

    (4) function -> DEF NAME LPAREN RPAREN statementc .

    DEF             reduce using rule 4 (function -> DEF NAME LPAREN RPAREN statementc .)
    $end            reduce using rule 4 (function -> DEF NAME LPAREN RPAREN statementc .)


state 15

    (9) statement -> IF . LPAREN expression RPAREN statementc
    (10) statement -> IF . LPAREN expression RPAREN statement
    (11) statement -> IF . LPAREN expression RPAREN statementc ELSE statementc
    (12) statement -> IF . LPAREN expression RPAREN statement ELSE statement
    (13) statement -> IF . LPAREN expression RPAREN statementc ELSE statement
    (14) statement -> IF . LPAREN expression RPAREN statement ELSE statementc

    LPAREN          shift and go to state 40


state 16

    (48) statement -> expression . LBRACE expression RBRACE EQUALS expression SEMICOLON
    (40) expression -> expression . COLON LBRACE argse RBRACE
    (41) expression -> expression . COLON LBRACE expression RBRACE
    (42) expression -> expression . COLON LBRACE RBRACE
    (52) expression -> expression . LBRACE expression RBRACE
    (60) expression -> expression . MUL expression
    (61) expression -> expression . DIV expression
    (62) expression -> expression . PLUS expression
    (63) expression -> expression . MINUS expression
    (64) expression -> expression . AND expression
    (65) expression -> expression . AND2 expression
    (66) expression -> expression . OR2 expression
    (67) expression -> expression . OR expression
    (68) expression -> expression . DNE expression
    (69) expression -> expression . EQ expression
    (70) expression -> expression . GRT expression
    (71) expression -> expression . GRTE expression
    (72) expression -> expression . LT expression
    (73) expression -> expression . LTE expression

    LBRACE          shift and go to state 41
    COLON           shift and go to state 42
    MUL             shift and go to state 43
    DIV             shift and go to state 44
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46
    AND             shift and go to state 47
    AND2            shift and go to state 48
    OR2             shift and go to state 49
    OR              shift and go to state 50
    DNE             shift and go to state 51
    EQ              shift and go to state 52
    GRT             shift and go to state 53
    GRTE            shift and go to state 54
    LT              shift and go to state 55
    LTE             shift and go to state 56


state 17

    (15) statement -> FOR . LPAREN statement expression SEMICOLON statement RPAREN statementc
    (16) statement -> FOR . LPAREN statement expression SEMICOLON statement RPAREN statement

    LPAREN          shift and go to state 57


state 18

    (17) statement -> WHILE . LPAREN expression RPAREN statementc
    (18) statement -> WHILE . LPAREN expression RPAREN statement

    LPAREN          shift and go to state 58


state 19

    (21) statement -> DPLUS . NAME SEMICOLON
    (25) expression -> DPLUS . NAME

    NAME            shift and go to state 59


state 20

    (22) statement -> DMINUS . NAME SEMICOLON
    (26) expression -> DMINUS . NAME

    NAME            shift and go to state 60


state 21

    (30) statement -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 61


state 22

    (46) statement -> VAR . NAME EQUALS expression SEMICOLON

    NAME            shift and go to state 62


state 23

    (43) expression -> LBRACE . argse RBRACE
    (44) expression -> LBRACE . expression RBRACE
    (45) expression -> LBRACE . RBRACE
    (29) argse -> . argse COMMA expression
    (31) argse -> . expression COMMA expression
    (23) expression -> . NAME DPLUS
    (24) expression -> . NAME DMINUS
    (25) expression -> . DPLUS NAME
    (26) expression -> . DMINUS NAME
    (40) expression -> . expression COLON LBRACE argse RBRACE
    (41) expression -> . expression COLON LBRACE expression RBRACE
    (42) expression -> . expression COLON LBRACE RBRACE
    (43) expression -> . LBRACE argse RBRACE
    (44) expression -> . LBRACE expression RBRACE
    (45) expression -> . LBRACE RBRACE
    (50) expression -> . INT
    (51) expression -> . NAME
    (52) expression -> . expression LBRACE expression RBRACE
    (53) expression -> . STRING
    (54) expression -> . NOT expression
    (55) expression -> . ISARR LPAREN expression RPAREN
    (56) expression -> . ARRLEN LPAREN expression RPAREN
    (57) expression -> . NAME LPAREN RPAREN
    (58) expression -> . NAME LPAREN argse RPAREN
    (59) expression -> . NAME LPAREN expression RPAREN
    (60) expression -> . expression MUL expression
    (61) expression -> . expression DIV expression
    (62) expression -> . expression PLUS expression
    (63) expression -> . expression MINUS expression
    (64) expression -> . expression AND expression
    (65) expression -> . expression AND2 expression
    (66) expression -> . expression OR2 expression
    (67) expression -> . expression OR expression
    (68) expression -> . expression DNE expression
    (69) expression -> . expression EQ expression
    (70) expression -> . expression GRT expression
    (71) expression -> . expression GRTE expression
    (72) expression -> . expression LT expression
    (73) expression -> . expression LTE expression

    RBRACE          shift and go to state 64
    NAME            shift and go to state 66
    DPLUS           shift and go to state 67
    DMINUS          shift and go to state 68
    LBRACE          shift and go to state 23
    INT             shift and go to state 26
    STRING          shift and go to state 27
    NOT             shift and go to state 28
    ISARR           shift and go to state 29
    ARRLEN          shift and go to state 30

    argse                          shift and go to state 63
    expression                     shift and go to state 65

state 24

    (49) statement -> RETURN . expression SEMICOLON
    (23) expression -> . NAME DPLUS
    (24) expression -> . NAME DMINUS
    (25) expression -> . DPLUS NAME
    (26) expression -> . DMINUS NAME
    (40) expression -> . expression COLON LBRACE argse RBRACE
    (41) expression -> . expression COLON LBRACE expression RBRACE
    (42) expression -> . expression COLON LBRACE RBRACE
    (43) expression -> . LBRACE argse RBRACE
    (44) expression -> . LBRACE expression RBRACE
    (45) expression -> . LBRACE RBRACE
    (50) expression -> . INT
    (51) expression -> . NAME
    (52) expression -> . expression LBRACE expression RBRACE
    (53) expression -> . STRING
    (54) expression -> . NOT expression
    (55) expression -> . ISARR LPAREN expression RPAREN
    (56) expression -> . ARRLEN LPAREN expression RPAREN
    (57) expression -> . NAME LPAREN RPAREN
    (58) expression -> . NAME LPAREN argse RPAREN
    (59) expression -> . NAME LPAREN expression RPAREN
    (60) expression -> . expression MUL expression
    (61) expression -> . expression DIV expression
    (62) expression -> . expression PLUS expression
    (63) expression -> . expression MINUS expression
    (64) expression -> . expression AND expression
    (65) expression -> . expression AND2 expression
    (66) expression -> . expression OR2 expression
    (67) expression -> . expression OR expression
    (68) expression -> . expression DNE expression
    (69) expression -> . expression EQ expression
    (70) expression -> . expression GRT expression
    (71) expression -> . expression GRTE expression
    (72) expression -> . expression LT expression
    (73) expression -> . expression LTE expression

    NAME            shift and go to state 66
    DPLUS           shift and go to state 67
    DMINUS          shift and go to state 68
    LBRACE          shift and go to state 23
    INT             shift and go to state 26
    STRING          shift and go to state 27
    NOT             shift and go to state 28
    ISARR           shift and go to state 29
    ARRLEN          shift and go to state 30

    expression                     shift and go to state 69

state 25

    (37) statementc -> LBRAC . statement RBRAC
    (38) statementc -> LBRAC . statements RBRAC
    (39) statementc -> LBRAC . empty RBRAC
    (9) statement -> . IF LPAREN expression RPAREN statementc
    (10) statement -> . IF LPAREN expression RPAREN statement
    (11) statement -> . IF LPAREN expression RPAREN statementc ELSE statementc
    (12) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (13) statement -> . IF LPAREN expression RPAREN statementc ELSE statement
    (14) statement -> . IF LPAREN expression RPAREN statement ELSE statementc
    (15) statement -> . FOR LPAREN statement expression SEMICOLON statement RPAREN statementc
    (16) statement -> . FOR LPAREN statement expression SEMICOLON statement RPAREN statement
    (17) statement -> . WHILE LPAREN expression RPAREN statementc
    (18) statement -> . WHILE LPAREN expression RPAREN statement
    (19) statement -> . NAME DPLUS SEMICOLON
    (20) statement -> . NAME DMINUS SEMICOLON
    (21) statement -> . DPLUS NAME SEMICOLON
    (22) statement -> . DMINUS NAME SEMICOLON
    (30) statement -> . BREAK SEMICOLON
    (32) statement -> . NAME LPAREN RPAREN SEMICOLON
    (33) statement -> . NAME LPAREN argse RPAREN SEMICOLON
    (34) statement -> . NAME LPAREN expression RPAREN SEMICOLON
    (46) statement -> . VAR NAME EQUALS expression SEMICOLON
    (47) statement -> . NAME EQUALS expression SEMICOLON
    (48) statement -> . expression LBRACE expression RBRACE EQUALS expression SEMICOLON
    (49) statement -> . RETURN expression SEMICOLON
    (35) statements -> . statement statements
    (36) statements -> . statement statement
    (74) empty -> .
    (23) expression -> . NAME DPLUS
    (24) expression -> . NAME DMINUS
    (25) expression -> . DPLUS NAME
    (26) expression -> . DMINUS NAME
    (40) expression -> . expression COLON LBRACE argse RBRACE
    (41) expression -> . expression COLON LBRACE expression RBRACE
    (42) expression -> . expression COLON LBRACE RBRACE
    (43) expression -> . LBRACE argse RBRACE
    (44) expression -> . LBRACE expression RBRACE
    (45) expression -> . LBRACE RBRACE
    (50) expression -> . INT
    (51) expression -> . NAME
    (52) expression -> . expression LBRACE expression RBRACE
    (53) expression -> . STRING
    (54) expression -> . NOT expression
    (55) expression -> . ISARR LPAREN expression RPAREN
    (56) expression -> . ARRLEN LPAREN expression RPAREN
    (57) expression -> . NAME LPAREN RPAREN
    (58) expression -> . NAME LPAREN argse RPAREN
    (59) expression -> . NAME LPAREN expression RPAREN
    (60) expression -> . expression MUL expression
    (61) expression -> . expression DIV expression
    (62) expression -> . expression PLUS expression
    (63) expression -> . expression MINUS expression
    (64) expression -> . expression AND expression
    (65) expression -> . expression AND2 expression
    (66) expression -> . expression OR2 expression
    (67) expression -> . expression OR expression
    (68) expression -> . expression DNE expression
    (69) expression -> . expression EQ expression
    (70) expression -> . expression GRT expression
    (71) expression -> . expression GRTE expression
    (72) expression -> . expression LT expression
    (73) expression -> . expression LTE expression

    IF              shift and go to state 15
    FOR             shift and go to state 17
    WHILE           shift and go to state 18
    NAME            shift and go to state 12
    DPLUS           shift and go to state 19
    DMINUS          shift and go to state 20
    BREAK           shift and go to state 21
    VAR             shift and go to state 22
    RETURN          shift and go to state 24
    RBRAC           reduce using rule 74 (empty -> .)
    LBRACE          shift and go to state 23
    INT             shift and go to state 26
    STRING          shift and go to state 27
    NOT             shift and go to state 28
    ISARR           shift and go to state 29
    ARRLEN          shift and go to state 30

    statement                      shift and go to state 70
    statements                     shift and go to state 71
    empty                          shift and go to state 72
    expression                     shift and go to state 16

state 26

    (50) expression -> INT .

    LBRACE          reduce using rule 50 (expression -> INT .)
    COLON           reduce using rule 50 (expression -> INT .)
    MUL             reduce using rule 50 (expression -> INT .)
    DIV             reduce using rule 50 (expression -> INT .)
    PLUS            reduce using rule 50 (expression -> INT .)
    MINUS           reduce using rule 50 (expression -> INT .)
    AND             reduce using rule 50 (expression -> INT .)
    AND2            reduce using rule 50 (expression -> INT .)
    OR2             reduce using rule 50 (expression -> INT .)
    OR              reduce using rule 50 (expression -> INT .)
    DNE             reduce using rule 50 (expression -> INT .)
    EQ              reduce using rule 50 (expression -> INT .)
    GRT             reduce using rule 50 (expression -> INT .)
    GRTE            reduce using rule 50 (expression -> INT .)
    LT              reduce using rule 50 (expression -> INT .)
    LTE             reduce using rule 50 (expression -> INT .)
    RBRACE          reduce using rule 50 (expression -> INT .)
    COMMA           reduce using rule 50 (expression -> INT .)
    SEMICOLON       reduce using rule 50 (expression -> INT .)
    RPAREN          reduce using rule 50 (expression -> INT .)


state 27

    (53) expression -> STRING .
